Ensure code examples maintain whitespace

--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -181,6 +181,10 @@ section{
   }
 }
 
+code {
+  white-space: pre-wrap;
+}
+
 
 /* FOOTER */
 footer{
